components/ingress/nginx/nginx-app01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app01
  namespace: frontend-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app01
  template:
    metadata:
      labels:
        app: nginx-app01
    spec:
      containers:
      - name: nginx-app01
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-app01-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-app01-config
        configMap:
          name: nginx-app01-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app01-service
  namespace: frontend-ns
spec:
  selector:
    app: nginx-app01
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
  type: ClusterIP
