components/ingress/nginx/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-nginx-ing
  namespace: demo-apis
spec:
  ingressClassName: nginx
  rules:
    - host: httpbin-nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
