components/ingress/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  namespace: frontend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapps.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app00-service   # El servicio que actuará como predeterminado
            port:
              number: 80
      - path: /app01
        pathType: Prefix
        backend:
          service:
            name: nginx-app01-service
            port:
              number: 80
      - path: /app02
        pathType: Prefix
        backend:
          service:
            name: nginx-app02-service
            port:
              number: 80
